--- a/Lite/style.css
+++ b/Lite/style.css
@@ -69,13 +69,15 @@ nav ul li a:active {
     flex-direction:column ;
     margin: 60px auto;
     background-color: #141417;
+    border: 1px solid #333;
     border-radius: 18px;
     gap:15px;
     transition: 0.3s;
 }
 .logincard:hover{
   transform: translateY(-6px);
-  box-shadow: 0 0 10px var(--red2);
+  border-color: rgba(225, 6, 0, 0.6);
+  box-shadow: 0 0 25px rgba(225, 6, 0, 0.18);
 }
 .logincard input{
     width: 85%;
@@ -197,6 +199,7 @@ button:hover {
 .card-front,.card-back {
   position: absolute;
   inset: 0;
+  border: 1px solid #333;
   backface-visibility: hidden;
   border-radius: 16px;
   overflow: hidden;
@@ -209,8 +212,10 @@ button:hover {
   inset: 0;
   backface-visibility: hidden;
   border-radius: 16px;
-  background-color: var(--red2);
-  box-shadow: 0 0 10px var(--red2);
+  border-color: rgba(225, 6, 0, 0.6);
+  box-shadow: 0 0 25px rgba(225, 6, 0, 0.18);
+  /* background-color: var(--red2);
+  box-shadow: 0 0 10px var(--red2); */
   overflow: hidden;
   background: #141417;
   transition: 0.3s;
