--- a/Lite/style.css
+++ b/Lite/style.css
@@ -1,18 +1,16 @@
 :root{
-  --black1: #000000;
-  --black2: #0e0e0f;
-  --dark: #0f0f10;
-  --red1:  #C10206;
+  --black1:#000000;
+  --black2:#0e0e0f;
+  --black3:#0b0b0d;
+  --dark:#0f0f10;
+  --dark2:#141417;
+  --red1:#C10206;
   --red2:#A50113 ;
-  --white: #FFFBF2;
-  --gray: #DFE2DB;
+  --white:#FFFBF2;
+  --gray:#DFE2DB;
+  --gray2:#333;
 }
-.yuji-boku-regular {
-  font-family: "Yuji Boku", serif;
-  font-weight: 400;
-  font-style: normal;
-}
-html { 
+html{ 
   overflow-y: scroll; 
 }
 *{
@@ -23,107 +21,162 @@ html {
   font-family:"Segoe UI",sans-serif;
 }
 body{
-    height: 400px;
-    background: #0b0b0d;
-    color: var(--white);
+  height: 700px;
+  background: var(--black3);
+  color: var(--white);
 }
+/* nav starts */
 nav{
-    position: sticky;
-    width: 100%;
-    top:0;
-    z-index: 9999;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 18px 25px;
-    background: var(--black1);
+  position: sticky;
+  width: 100%;
+  top:0;
+  z-index: 9999;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 18px 25px;
+  background: var(--black1);
 }
 nav h1{
-    font-family: "Yuji Boku";
-    color: var(--red1);
+  font-family: "Yuji Boku";
+  color: var(--red1);
 }
 nav ul{
-    display: flex;
-    list-style: none;
-    gap: 40px;
+  display: flex;
+  list-style: none;
+  gap: 40px;
 }
 nav ul li a{
-    text-decoration: none;
-    color: var(--white);
-    transition: 0.3s;
-}
-nav ul li a:hover {
-  color: var(--red1);
+  text-decoration: none;
+  color: var(--white);
   transition: 0.3s;
 }
 nav ul li a:active {
-    color: var(--red1);
-    transition: 1s;
+  color: var(--red1);
+  transition: 0.3s;
 }
+/* nav ends */
+/* mic start */
+.mic{
+  height: 80px;
+  width: 80px;
+  background-color: var(--red1);
+  border-radius: 50%;
+  transition: 0.3s;
+  border: 5px solid rgba(225, 6, 0, 0.9);
+}
+.wrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+.mic:hover{
+  border: 10px solid rgba(225, 6, 0, 0.6);
+  background-color: var(--red2);
+  box-shadow: 0 0 20px var(--red2);
+  transition: 0.3s;
+}
+/* mic ends */
+/* login starts */
 .logincard{
-    position: relative;
-    top: 150px;
-    max-width:450px;
-    display: flex;
-    align-items: center;
-    flex-direction:column ;
-    margin: auto;
-    background-color: #141417;
-    border: 1px solid #333;
-    border-radius: 18px;
-    gap:15px;
-    transition: 0.3s;
+  position: relative;
+  top: 150px;
+  max-width:450px;
+  display: flex;
+  align-items: center;
+  flex-direction:column ;
+  margin: auto;
+  background-color: var(--dark2);
+  border: 1px solid var(--gray2);
+  border-radius: 18px;
+  gap:15px;
+  transition: 0.3s;
 }
 .logincard:hover{
   transform: translateY(-6px);
-  border-color: rgba(225, 6, 0, 0.6);
+  border-color: rgba(225, 6, 0, 0.6);  
+  /* template color for border */
+  /* template color for shadow */
   box-shadow: 0 0 25px rgba(225, 6, 0, 0.18);
 }
+.logincard h2{
+  margin-top:30px;
+  align-self:self-start;
+  margin-left:40px;
+  margin-bottom: 5px;
+}
 .logincard input{
-    width: 85%;
-    padding: 15px;
-    background: var(--black1);
-    border: 1px solid var(--black2);
-    color:var(--white);
-    border-radius: 8px;
+  width: 85%;
+  padding: 15px;
+  background: var(--black1);
+  border: 1px solid var(--black2);
+  color:var(--white);
+  border-radius: 8px;
+}
+.wrapper1{
+  width: 85%; 
+  display: inline-block;
+}
+#password{
+  width: 100%;
+}
+.toggle{
+  position: absolute;
+  height: 20px;
+  width: 20px;
+  right : 46px;
+  bottom: 104px;
 }
 .logincard button {
-    width: 50%;
-    background: var(--red2);
-    border: none;
-    color: var(--white);
-    padding: 14px;
-    border-radius: 30px;
-    font-size: 16px;
-    cursor: pointer;
-    transition: 0.3s;
-    margin-top: 5px;
-    margin-bottom: 30px;
+  width: 50%;
+  background: var(--red2);
+  border: none;
+  color: var(--white);
+  padding: 14px;
+  border-radius: 30px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: 0.3s;
+  margin-top: 5px;
+  margin-bottom: 20px;
 }
 button:hover {
   opacity: 0.85;
 }
-.micin{
-  position: relative;
-  top: 75px;
-  margin-top: 200px;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
+/* login ends */
+/* trending start */
+.navsearch{
+  display:flex;
+  gap:10px;
+  align-items:center;
 }
-.circl{
-  background-color: var(--red1);
-  border-radius: 50%;
-  transition: 0.3s;
+.navsearch input{
+  width: min(360px, 70vw);
+  padding: 10px 14px;
+  border-radius: 999px;
+  border: 1px solid var(--dark2);
+  background: var(--black3);
+  color: var(--white);
+  outline: none;
 }
-.micin img{
-  height: 100px;
-  border-radius: 50%;
+.navsearch input:focus{
+  border-color: rgba(225,6,0,0.7);
+  box-shadow: 0 0 0 3px rgba(225,6,0,0.15);
 }
-.circl:hover{
-  background-color: var(--red2);
-  box-shadow: 0 0 20px var(--red2);
-  transition: 0.3s;
+.navsearch button{
+  padding: 12px 14px;
+  border-radius: 999px;
+  background: var(--red2);
+  border:none;
+  color:#fff;
+  cursor:pointer;
+}
+.navsearch button:hover{
+  opacity:0.9; 
+}
+#searchresults{
+  padding: 16px 24px 0 24px;
 }
 .gridbase{
   position: relative;
@@ -133,25 +186,162 @@ button:hover {
   gap: 25px;
   padding-bottom: 20px;
 }
-
-.toggle{
+.songcard {
+  perspective: 1000px;
+  cursor: pointer;
+}
+.card-inner {
   position: relative;
-  height: 20px;
-  width: 20px;
-  left: 170px;
-  bottom: 48px;
+  width: 100%;
+  height: 100%;
+  min-height: 260px;
+  transition: transform 0.7s;
+  transform-style: preserve-3d;
 }
-.cir {
-  height: 24px;
-  width: 24px;
-  border-radius: 24px;
-  background-color: var(--red1);
-  position: fixed; 
-  top: 0;
-  left: 0;
-  pointer-events: none;
-  z-index: 99999999; /* so that it stays on top of all other elements */
+.card-front,.card-back {
+  position: absolute;
+  inset: 0;
+  border: 1px solid var(--gray2);
+  backface-visibility: hidden;
+  border-radius: 16px;
+  overflow: hidden;
+  background: var(--black3);
+  transition: 0.3s;
 }
+.card-front {
+  padding: 20px;
+  display: flex;
+  flex-direction:column;
+  justify-content:space-between;
+}
+.card-back {
+  transform: rotateY(180deg);
+  padding: 20px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.card-front:hover,.card-back:hover{
+  position: absolute;
+  inset: 0;
+  backface-visibility: hidden;
+  border-radius: 16px;
+  border-color: rgba(225, 6, 0, 0.6);
+  box-shadow: 0 0 25px rgba(225, 6, 0, 0.18);
+  overflow: hidden;
+  background: #141417;
+  transition: 0.3s;
+}
+.songcard.flipped .card-inner{
+  transform: rotateY(180deg);
+}
+.songimage{
+  align-self: center;
+  border-radius: 15px;
+  height: 150px;
+  width: 150px;
+}
+.songrank {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px;
+}
+.rank{
+  color: var(--red1);
+}
+.song {
+  display: block;
+  max-width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-weight:400;
+}
+.card-back h3 {
+  color: var(--red1);
+  margin-bottom: 10px;
+}
+.hint {
+  font-size: 12px;
+  opacity: 0.6;
+  margin-top: 10px;
+}
+.artist {
+  display: block;
+  font-size: 13px;
+  color: var(--gray);
+  margin-top: 4px;
+}
+.search-card{
+  width: 100%;
+  background:var(--black3);
+  border:1px solid rgba(225, 6, 0, 0.6);
+  border-radius:18px;
+  padding:16px;
+  display:flex;
+  gap:14px;
+  align-items:center;
+}
+.search-card img{
+  width:84px;
+  height:84px;
+  border-radius:14px;
+  object-fit:cover;
+}
+.search-meta{
+  flex:1;
+  min-width:0;
+}
+.search-title{
+  font-weight:700;
+  margin-bottom:4px;
+  white-space:nowrap;
+  overflow:hidden;
+  text-overflow:ellipsis;
+}
+.search-artist{
+  color:var(--white);
+  margin-bottom:6px;
+  white-space:nowrap;
+  overflow:hidden;
+  text-overflow:ellipsis;
+}
+.search-extra{
+  color:var(--white);
+  font-size:13px;
+  display:flex;
+  gap:10px;
+  flex-wrap:wrap;
+}
+.search-actions{
+  display:flex;
+  flex-direction:column;
+  gap:8px;
+}
+.search-actions a{
+  color: var(--red1);
+  text-decoration:none;
+  font-size:13px;
+}
+.search-actions a:hover{
+  opacity:0.85; 
+}
+.preview-audio{
+  width: 400px;
+  margin-top: 10px;
+}
+audio::-webkit-media-controls-panel {
+  background-color: #cbcaca
+}
+.open-itune{
+  display: flex;
+  justify-content: end;
+  padding-right: 20px;
+}
+/* trend ends */
+/* music start */
 #musiceffect {
   position: fixed;
   inset: 0;
@@ -180,190 +370,4 @@ button:hover {
     opacity: 0;
   }
 }
-.songcard {
-  perspective: 1000px;
-  cursor: pointer;
-}
-.card-inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  min-height: 260px;
-  transition: transform 0.7s;
-  transform-style: preserve-3d;
-}
-.songcard.flipped .card-inner {
-  transform: rotateY(180deg);
-}
-.card-front,.card-back {
-  position: absolute;
-  inset: 0;
-  border: 1px solid #333;
-  backface-visibility: hidden;
-  border-radius: 16px;
-  overflow: hidden;
-  background: #141417;
-  transition: 0.3s;
-
-}
-.card-front:hover,.card-back:hover{
-  position: absolute;
-  inset: 0;
-  backface-visibility: hidden;
-  border-radius: 16px;
-  border-color: rgba(225, 6, 0, 0.6);
-  box-shadow: 0 0 25px rgba(225, 6, 0, 0.18);
-  /* background-color: var(--red2);
-  box-shadow: 0 0 10px var(--red2); */
-  overflow: hidden;
-  background: #141417;
-  transition: 0.3s;
-}
-.card-front {
-  padding: 20px;
-  display: flex;
-  flex-direction:column;
-  justify-content:space-between;
-}
-.songimage{
-  align-self: center;
-  border-radius: 15px;
-  height: 150px;
-  width: 150px;
-}
-.songrank {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 5px;
-}
-.rank{
-  color: var(--red1);
-}
-.song {
-  display: block;
-  max-width: 100%;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  font-weight:400;
-}
-  .card-back {
-  transform: rotateY(180deg);
-  padding: 20px;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.card-back h3 {
-  color: var(--red1);
-  margin-bottom: 10px;
-}
-.hint {
-  font-size: 12px;
-  opacity: 0.6;
-  margin-top: 10px;
-}
-.artist {
-  display: block;
-  font-size: 13px;
-  color: #b5b5b5;
-  margin-top: 4px;
-}
-.navsearch{
-  display:flex;
-  gap:10px;
-  align-items:center;
-}
-.navsearch input{
-  width: min(360px, 70vw);
-  padding: 10px 14px;
-  border-radius: 999px;
-  border: 1px solid #2a2a2a;
-  background: #0b0b0d;
-  color: #fff;
-  outline: none;
-}
-.navsearch input:focus{
-  border-color: rgba(225,6,0,0.7);
-  box-shadow: 0 0 0 3px rgba(225,6,0,0.15);
-}
-.navsearch button{
-  padding: 10px 14px;
-  border-radius: 999px;
-  background: var(--red2);
-  border:none;
-  color:#fff;
-  cursor:pointer;
-}
-.navsearch button:hover{ opacity:0.9; }
-#searchResults{
-  padding: 16px 24px 0 24px;
-}
-.search-card{
-  width: 100%;
-  /* margin-top: 100px; */
-  background:#141417;
-  border:1px solid #222;
-  border-radius:18px;
-  padding:16px;
-  display:flex;
-  gap:14px;
-  align-items:center;
-  box-shadow: 0 0 25px rgba(225,6,0,0.10);
-}
-.search-card img{
-  width:84px;
-  height:84px;
-  border-radius:14px;
-  object-fit:cover;
-}
-.search-meta{
-  flex:1;
-  min-width:0;
-}
-.search-title{
-  font-weight:700;
-  margin-bottom:4px;
-  white-space:nowrap;
-  overflow:hidden;
-  text-overflow:ellipsis;
-}
-.search-artist{
-  color:#b5b5b5;
-  margin-bottom:6px;
-  white-space:nowrap;
-  overflow:hidden;
-  text-overflow:ellipsis;
-}
-.search-extra{
-  color:#b5b5b5;
-  font-size:13px;
-  display:flex;
-  gap:10px;
-  flex-wrap:wrap;
-}
-.search-actions{
-  display:flex;
-  flex-direction:column;
-  gap:8px;
-}
-.search-actions a{
-  color:#e10600;
-  text-decoration:none;
-  font-size:13px;
-}
-.search-actions a:hover{ opacity:0.85; }
-.preview-audio{
-  width: 400px;
-  margin-top: 10px;
-}
-audio::-webkit-media-controls-panel {
-  background-color: #cbcaca
-}
-.open-itune{
-  display: flex;
-  justify-content: end;
-  padding-right: 20px;
-}
+/* music ends */
