--- a/Lite/style.css
+++ b/Lite/style.css
@@ -76,9 +76,29 @@ nav ul li a:active {
 }
 /* nav ends */
 /* mic start */
-.mic{
-  height: 80px;
+.mic img{
   width: 80px;
+  height: 80px;
+  cursor: pointer;
+  transition: transform 0.2s ease;
+}
+.mic img:hover{
+  transform: scale(1);
+}
+.mic img.recording{
+  animation: pulse 1.2s infinite;
+}
+@keyframes pulse{
+  0% { transform: scale(0.8); }
+  50% { transform: scale(1.25); }
+  100% { transform: scale(0.8); }
+}
+.mic{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  width: 100px;
   background-color: var(--red1);
   border-radius: 50%;
   transition: 0.3s;
@@ -86,6 +106,8 @@ nav ul li a:active {
 }
 .wrapper{
   display: flex;
+  flex-direction: column;
+  gap: 20px;
   justify-content: center;
   align-items: center;
   height: 100%;
@@ -93,8 +115,11 @@ nav ul li a:active {
 .mic:hover{
   border: 10px solid rgba(225, 6, 0, 0.6);
   background-color: var(--red2);
-  box-shadow: 0 0 20px var(--red2);
+  box-shadow: 0 0 15px var(--red1);
   transition: 0.3s;
+} 
+#recStatus{
+  color: var(--white);
 }
 /* mic ends */
 /* login starts */
@@ -106,8 +131,8 @@ nav ul li a:active {
   align-items: center;
   flex-direction:column ;
   margin: auto;
-  background-color: var(--dark2);
-  border: 1px solid var(--gray2);
+  background-color: var(--dark3);
+  border: 1px solid var(--black4);
   border-radius: 18px;
   gap:15px;
   transition: 0.3s;
@@ -136,6 +161,24 @@ nav ul li a:active {
 .wrapper1{
   width: 85%; 
   display: inline-block;
+}
+#wrapper2{
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+}
+#sign{
+  margin-right: 37px;
+  margin-top: 30px;
+  color: var(--red1);
+  text-decoration: none;
+}
+#sign:hover{
+  margin-right: 37px;
+  margin-top: 30px;
+  color: var(--red2);
+  text-decoration: none;
 }
 #password{
   width: 100%;
@@ -184,12 +227,18 @@ button:hover {
   box-shadow: 0 0 0 3px rgba(225,6,0,0.15);
 }
 .navsearch button{
-  padding: 12px 14px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 12px 12px;
   border-radius: 999px;
   background: var(--red2);
   border:none;
   color: var(--white);
   cursor:pointer;
+}
+.navsearch img{
+  height: 15px;
 }
 .navsearch button:hover{
   opacity:0.9; 
@@ -203,6 +252,9 @@ button:hover {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 25px;
+}
+#grid{
+  padding-bottom: 20px;
 }
 .songcard {
   perspective: 1000px;
@@ -260,7 +312,7 @@ button:hover {
   margin-bottom: 5px;
   border-radius: 999px;
   border: 1px solid rgba(255,255,255,0.12);
-  background: rgba(0,0,0,0.45);
+  background: rgba(0, 0, 0, 0.053);
   color: var(--white);
   cursor: pointer;
   display: grid;
@@ -374,11 +426,12 @@ button:hover {
   margin-top: 10px;
 }
 audio::-webkit-media-controls-panel {
-  background-color: #cbcaca
+  background-color: rgba(0, 0, 0, 0.053);
 }
-.preview-audio {
+/* something went wrong here idk why i wrote this */
+/* .preview-audio {
   display: none;
-}
+} */
 
 .open-itune{
   display: flex;
@@ -423,15 +476,28 @@ audio::-webkit-media-controls-panel {
   margin: 20px;
   padding-left: 10px;
   padding-right: 10px;
-  border: 1px solid rgba(255,255,255,0.08);
-  background-color: var(--dark2);
-  border: 2px solid var(--red2);
+  border: 2px solid rgba(255,255,255,0.08);
+  background-color: var(--black3);
   display: flex;
   grid-template-columns: 340px 1fr;
   gap: 28px;
   align-items: start;
   position: relative;
-  box-shadow: 0 0 25px rgba(225, 6, 0, 0.18);
+  border-radius: 20px;
+  transition: 0.3s;
+}
+.profile-card:hover{
+  margin: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: var(--black3);
+  display: flex;
+  grid-template-columns: 340px 1fr;
+  gap: 28px;
+  align-items: start;
+  position: relative;
+  border: 2px solid var(--red2);
+  box-shadow: 0 0 20px rgba(225, 6, 0, 0.18);
   border-radius: 20px;
 }
 .profile{
@@ -467,7 +533,7 @@ audio::-webkit-media-controls-panel {
   padding: 10px;
   color: var(--white);
   border: 1px solid var(--black4);
-  background-color:var(--dark);
+  background-color:var(--dark3);
   height: 400px;
   width: 380px;
   border-radius: 10px;
@@ -480,21 +546,21 @@ audio::-webkit-media-controls-panel {
 }
 .library h2{
   padding: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 .playlists{
   height: auto;
   max-width: 950px;
   border: 1px solid var(--black4);
   border-radius: 10px;
-  background-color:var(--dark);
+  background-color:var(--dark3);
 }
 .songs{
   height: auto;
   max-width: 950px;
   border: 1px solid var(--black4);
   border-radius: 10px;
-  background-color:var(--dark);
+  background-color:var(--dark3);
 }
 #playlistCards{
   display:flex;
@@ -502,7 +568,7 @@ audio::-webkit-media-controls-panel {
   gap:14px;
 }
 .playlist-card{
-  background: var(--dark2);
+  background: var(--dark3);
   border: 1px solid var(--red1);
   border-radius: 18px;
   padding: 16px;
@@ -601,9 +667,11 @@ audio::-webkit-media-controls-panel {
 }
 #likedCards .song,#likedCards .artist{
   /* display:block; */
+  font-size: small;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  margin-bottom: 5px;
 }
 #likedCards .preview-audio{
   width: 100%;
